Mensagem do commit

--- a/views/skills.html
+++ b/views/skills.html
@@ -12,7 +12,7 @@
                        <li ng-repeat="skills in skillssoft">{{skills.name}}</li>
                    </ul>   
                 </div>
-                <figure class="col-xs-12 col-sm-6 hidden-xs">
+                <figure class="col-xs-12 col-sm-6 ">
                     <img ng-src="{{src}}" alt="{{title}}">
                 </figure>
             </div>
