--- a/views/portfolio.html
+++ b/views/portfolio.html
@@ -1,6 +1,10 @@
 <div class="container">
     <div class="row">
-        <h1 class="title">PORTFOLIO</h1>
+        <h1 
+            class="title"
+            when-visible="animateElementInZOOM"
+            when-not-visible="animateElementOutZOOM"
+        >PORTFOLIO</h1>
         <div class="btn-group list-type" data-toggle="list-type">
             <label class="btn _btn">
               <input type="radio" name='gender2'  ng-model="findWork" value="" >
