--- a/views/contact.html
+++ b/views/contact.html
@@ -6,16 +6,44 @@
 		</div>
 		<div class="box-contacts container">
 
-			<h1 class="text-center">Get in Touch</h1>
+			<h1 
+				class="text-center"
+				when-visible="animateElementInTADA"
+				when-not-visible="animateElementOutTADA"
+			>Get in Touch</h1>
 
 			<div class="line"></div>
 			<h3 class="text-center">Feel free to call, send me an email or message in facebook.</h3>
 			<div class="line"></div>
 			<div class="group-contacts col-xs-12 ">
-				<h4 class=""><i class="fa fa-envelope "></i>sergio.mantonio@gmail.com</h4>
-				<h4 class=""><i class="fa fa-phone "></i>818 310 8524</h4>
-				<h4 class=""><i class="{{facebook.icon}}"></i><a ng-href="{{facebook.src}}" target="_blank">/sergio.antonio.503</a></h4>
-				<h4 class=""><i class="{{linkedin.icon}} "></i><a ng-href="{{linkedin.src}}" target="_blank">/sérgio-antónio-96aa8ab0</a></h4>
+				<h4 class="">
+					<i 
+						class="fa fa-envelope"
+						when-visible="animateElementInTADA"
+						when-not-visible="animateElementOutTADA"></i>
+					sergio.mantonio@gmail.com
+				</h4>
+				<h4 class="">
+					<i 
+						class="fa fa-phone"
+						when-visible="animateElementInTADA"
+						when-not-visible="animateElementOutTADA"></i>
+					818 310 8524
+				</h4>
+				<h4 class="">
+					<i 
+						class="{{facebook.icon}}"
+						when-visible="animateElementInTADA"
+						when-not-visible="animateElementOutTADA"></i>
+					<a ng-href="{{facebook.src}}" target="_blank">/sergio.antonio.503</a>
+				</h4>
+				<h4 class="">
+					<i 
+						class="{{linkedin.icon}}"
+						when-visible="animateElementInTADA"
+						when-not-visible="animateElementOutTADA"></i>
+					<a ng-href="{{linkedin.src}}" target="_blank">/sérgio-antónio-96aa8ab0</a>
+				</h4>
 			</div>
 		</div>
 	</div>
