--- a/views/skills.html
+++ b/views/skills.html
@@ -1,18 +1,30 @@
         <div class="container">
             <div class="row">
-                <div class="base _hard col-xs-12 col-sm-6 text-center">
+                <div 
+                    class="base _hard col-xs-12 col-sm-6 text-center animate-hidden"
+                    when-visible="animateElementInLEFT"
+                    when-not-visible="animateElementOutLEFT"
+                >
                     <h1 class="col-xs-12"><i class="fa fa-battery-full"></i>{{titleHard}}</h1>
                     <ul >
                         <li ng-repeat="skill in skillshard">{{skill.name}}</li>
                     </ul>
                 </div>
-                <div class="base _soft col-xs-12 col-sm-6 text-center right" >
+                <div 
+                    class="base _soft col-xs-12 col-sm-6 text-center right animate-hidden"
+                    when-visible="animateElementInRIGHT"
+                    when-not-visible="animateElementOutRIGHT" 
+                >
                     <h1 class="col-xs-12"><i class="fa fa-battery-half"></i>{{titleSoft}}</h1>
                     <ul>
                        <li ng-repeat="skills in skillssoft">{{skills.name}}</li>
                    </ul>   
                 </div>
-                <figure class="col-xs-12 col-sm-6 ">
+                <figure 
+                    class="col-xs-12 col-sm-6 animate-hidden"
+                    when-visible="animateElementInUP"
+                    when-not-visible="animateElementOutUP"
+                >
                     <img ng-src="{{src}}" alt="{{title}}">
                 </figure>
             </div>
